# elementipelago

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  build-sprites.sh  discord-users.json  fetch-discord-users.js  flake.nix  index.html  package.json  quad_storage.js  sapp_jsutils.js  svelte.config.js
.github/: release.yml
.github/workflows/: build-apworld.yml
assets/: element-atlas.json  index-1CypKz4K.js  index-9NHR22oe.js  index-B4DIEVI0.css  index-B57tkVDM.js  index-B8-Ef4QR.js  index-BCaUisgT.css  index-BHCDVSfi.css  index-BOzVpExO.js  index-BUu8-M9t.css  index-BqIpNwEn.css  index-BwF-y6PU.css  index-BxD7fOWk.js  index-BxvrqXT2.js  index-BzNqLkmb.js  index-C4Op-HBc.css  index-CB_2Sj4O.js  index-CIbqn7Jh.css  index-DTTjYvMi.css  index-Db9IeSdG.js  index-DbnSHspr.js  index-Dl9E8t9r.js  index-DugIP2Kq.js  index-SnvJVTJ8.css  index-fgHIge5f.css  index-gUC02Tih.css  index-gX3Zzl9B.js  index-wIt8CB-1.js
assets/Elements/: armor.aseprite  berry.aseprite  boots.aseprite  egg.aseprite  element.aseprite  emerald.aseprite  heart.aseprite  hourglass.aseprite  key.aseprite  leaf.aseprite  magic.aseprite  piece.aseprite  ring.aseprite  sign.aseprite  sword.aseprite  tree.aseprite
assets/element-sprites/: boat.aseprite  book.aseprite  boots.aseprite  car.aseprite  chest.aseprite  coin.aseprite  egg.aseprite  element.aseprite  fruit.aseprite  gem.aseprite  heart.aseprite  key.aseprite  location.aseprite  magic.aseprite  orb.aseprite  potion.aseprite  puzzle.aseprite  ring.aseprite  rock.aseprite  route.aseprite  sand.aseprite  skull.aseprite  strawberry.aseprite  sword.aseprite  tree.aseprite  water.aseprite
public/models/: icon_model.meta.json
sprites/elements/: apple.aseprite  ball.aseprite  boat.aseprite  book.aseprite  bow.aseprite  car.aseprite  cave.aseprite  chest.aseprite  coin.aseprite  desert.aseprite  earth.aseprite  fire.aseprite  gun.aseprite  hammer.aseprite  hat.aseprite  hills.aseprite  house.aseprite  ice.aseprite  (+22 more)
src/: App.svelte  app.css  archipelago.rs  assets.rs  atlas.rs  atlases.rs  audio.js  consts.js  game.rs  graph.js  graph.rs  iconml.js  input.rs  login.rs  main.js  main.rs  util.rs  utils.js
(+69 files in other folders)
