[package]
name = "elementipelago"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking", "bevy_picking"] }
float-ord = "0.3.2"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
websocket = { version = "0.27.1", features = ["sync", "sync-ssl", "native-tls"], default-features = false }

# ------------------------ Profiles ------------------------
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
# ----------------------------------------------------------
