[package]
name = "elementipelago"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["bevy_picking"] }
bevy_embedded_assets = "0.14.0"
bevy_ui_text_input = "0.6.0"
crossbeam-channel = "0.5.15"
float-ord = "0.3.2"
futures = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_repr = "0.1.20"
tokio = { version = "1.48.0", features = ["rt"] }
url = "2.5.7"
yawc = "0.2.7"

# ------------------------ Profiles ------------------------
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
# ----------------------------------------------------------
