[package]
name = "elementipelago"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { version = "*", features = ["quad-snd"] }
nanoserde = "*"
quad-net = "*"
quad-storage = "0.1.3"

# ------------------------ Profiles ------------------------
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
# ----------------------------------------------------------
